hacky br fix for hero image h1, can't get hero image to stretch correctly, otherwise finished

--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -13,10 +13,18 @@
 
 */
 .logo {
+  align-self: flex-start;
   height: 2rem;
+  display: block;
 }
 
-
+.header {
+  align-items: flex-end;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-size: large;
+  color:#525351;
+}
 body {
   font-family: 'Avenir', sans-serif;
 }
@@ -29,6 +37,67 @@ address p {
     padding: 0;
     font-family: 'Avenir', sans-serif;
     color:white;
+    line-height: 1;
+}
+.hero-image{
+  font-size: large;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  width: 100%;
+  height: 700px;
+  color: white;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.205),rgba(0, 0, 0, 0.356)),
+  url(images/hero.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.column {
+  flex-direction: column;
+}
+.hero-image h1{
+  font-weight: 500;
+}
+.hero-image p{
+  line-height: 2;
+}
+.hero-image .col-half {
+  padding-right: 5rem;
+}
+
+
+.tiempos {
+  font-family: 'Tiempos Headline', serif;
+}
+
+.tiempos-gray {
+  font-weight: 500;
+  color: #525351;
+  font-family: 'Tiempos Headline', serif;
+}
+.tiempos-white {
+  font-weight: 500;
+  color: #ffffff;
+  font-family: 'Tiempos Headline', serif;
+}
+
+.text-center {
+  text-align: center;
+}
+.item-center {
+    align-items: center;
+}
+
+.gray-line {
+  border-bottom: 1px solid lightgrey;
+}
+
+.location{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.flex {
+  display: flex;
 }
 
 .row {
@@ -36,8 +105,46 @@ address p {
   padding-right: 5rem;
   display: flex;
 }
+.align-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.contact-us {
+  font-size: large;
+  color: white;
+  background-color: rgb(41,68,100);
+  height: 45px;
+  width: 150px;
+  border: 0;
+  border-radius: 5px;
+}
+.get-started {
+  font-size: large;
+  color: white;
+  background-color: rgb(41,68,100);
+  height: 50px;
+  width: 200px;
+  border: 0;
+  border-radius: 5px;
+}
+.banner-white{
+  font-size: large;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: rgb(250,250,250);
+}
 
 .banner {
+  line-height: 2;
+  font-size: large;
   background-color:#535353;
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -62,10 +169,15 @@ address p {
   margin-right: 5rem;
 }
 
+.learn-more {
+  margin-bottom: 2rem;
+}
+.col-full {
+  width: 100%;
+}
 .col-half {
   width: 50%;
 }
-
 .col-fourth {
   width: 25%;
 }
